# snuffbox-hydra

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  update_submodules.sh
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/application/: application.cc  application.h  window.cc  window.h
src/engine/assets/: asset.cc  asset.h  asset_manager.cc  asset_manager.h  material_asset.cc  material_asset.h  model_asset.cc  model_asset.h  scene_asset.cc  scene_asset.h  script_asset.cc  script_asset.h  shader_asset.cc  shader_asset.h
src/engine/auxiliary/: debug.cc  debug.h
src/engine/components/: camera_component.cc  camera_component.h  mesh_component.cc  mesh_component.h  mesh_renderer_component.cc  mesh_renderer_component.h  script_component.cc  script_component.h  transform_component.cc  transform_component.h
src/engine/cvar/: command_line_parser.cc  command_line_parser.h  cvar.cc  cvar.h  cvar_service.cc  cvar_service.h
src/engine/definitions/: camera.h  cli.h  components.h  input.h  keycodes.h  material_data.h
src/engine/ecs/: component.cc  component.h  entity.cc  entity.h  scene.cc  scene.h
src/engine/graphics/: material.cc  material.h  mesh.cc  mesh.h
src/engine/input/: input_event.cc  input_event.h  input_event_handler.cc  input_event_handler.h  input_filter.cc  input_filter.h  input_queue.h  joystick.cc  joystick.h  keyboard.cc  keyboard.h  mouse.cc  mouse.h
src/engine/rsc/icons/: model_icon.png~
src/engine/services/: asset_service.cc  asset_service.h  cvar_service.cc  cvar_service.h  input_service.cc  input_service.h  renderer_service.cc  renderer_service.h  scene_service.cc  scene_service.h  script_service.cc  script_service.h  service.cc  service.h  window_service.cc  window_service.h
src/foundation/: CMakeLists.txt
src/foundation/auxiliary/: logger.cc  logger.h  pointer_math.cc  pointer_math.h  string_utils.cc  string_utils.h  timer.cc  timer.h  type_traits.h
src/foundation/containers/: function.h  map.h  queue.h  string.h  string_utils.cc  string_utils.h  uuid.cc  uuid.h  vector.h
src/foundation/definitions/: archive.h  error_codes.h  io.h  logging.h  time_units.h
src/foundation/encryption/: rc4.cc  rc4.h
src/foundation/io/: directory.h  directory_listener.h  directory_tree.cc  directory_tree.h  file.cc  file.h  path.cc  path.h  resources.cc  resources.h
src/foundation/linux/: linux_directory.cc  linux_directory.h  linux_directory_listener.cc  linux_directory_listener.h
src/foundation/memory/: eastl_config.h  memory.cc  memory.h
src/foundation/memory/allocators/: allocator.cc  allocator.h  eastl_allocator.cc  eastl_allocator.h  malloc_allocator.cc  malloc_allocator.h  rapidjson_allocator.cc  rapidjson_allocator.h
src/foundation/serialization/: archive.cc  archive.h  load_archive.cc  load_archive.h  save_archive.cc  save_archive.h  serializable.h
src/foundation/win32/: win32_directory.cc  win32_directory.h  win32_directory_listener.cc  win32_directory_listener.h  win32_include.h
src/graphics/: CMakeLists.txt  renderer.cc  renderer.h  renderer_loader.h  rendering.h
src/graphics/d3d11/: d3d11_renderer.cc  d3d11_renderer.h  d3d11_utils.cc  d3d11_utils.h
src/graphics/definitions/: camera.h  com_ptr.h  draw_command.h  frame_data.h  graphics_window.h  render_target.h  shader_constants.cc  shader_constants.h  shader_types.h  texture_formats.h  vertex.h  viewport.h
src/graphics/ogl/: ogl_context.h  ogl_index_buffer.cc  ogl_index_buffer.h  ogl_loader.cc  ogl_loader.h  ogl_mesh.cc  ogl_mesh.h  ogl_renderer.cc  ogl_renderer.h  ogl_shader.cc  ogl_shader.h  ogl_utils.cc  ogl_utils.h  ogl_vertex_buffer.cc
src/graphics/ogl/linux/: linux_ogl_context.cc  linux_ogl_context.h
src/graphics/ogl/resources/: ogl_index_buffer.cc  ogl_index_buffer.h  ogl_material.cc  ogl_material.h  ogl_mesh.cc  ogl_mesh.h  ogl_shader.cc  ogl_shader.h  ogl_uniform_buffer.cc  ogl_uniform_buffer.h  ogl_vertex_buffer.cc  ogl_vertex_buffer.h
src/graphics/ogl/win32/: win32_ogl_context.cc  win32_ogl_context.h
src/scripting/: CMakeLists.txt  New Text Document.txt  script_args.cc  script_args.h  script_callback.h  script_class.cc  script_class.h  script_function.h  script_register.h  script_state.h  script_type_traits.h  script_value.cc  script_value.h  scripting.h
src/scripting/definitions/: script_types.h
src/scripting/duk/: duk_allocator.cc  duk_allocator.h  duk_callback.h  duk_definitions.h  duk_function.cc  duk_function.h  duk_register.cc  duk_register.h  duk_state.cc  duk_state.h  duk_wrapper.cc  duk_wrapper.h
src/test/: CMakeLists.txt  TextFile1.txt  main.cc
src/tools/: CMakeLists.txt
src/tools/bin2h/: CMakeLists.txt  binary_writer.cc  binary_writer.h  main.cc
src/tools/builder/: CMakeLists.txt  builder.cc  builder.h
src/tools/builder/compilers/: compiler.cc  compiler.h  script_compiler.cc  script_compiler.h
src/tools/builder/definitions/: asset_types.cc  asset_types.h  magic.h
src/tools/builder/threading/: build_item.cc  build_item.h  build_job.cc  build_job.h  build_scheduler.cc  build_scheduler.h
src/tools/compilers/: CMakeLists.txt  compiler.cc  compiler.h  scene_compiler.cc  scene_compiler.h  script_compiler.cc  script_compiler.h
src/tools/compilers/compilers/: compiler.cc  compiler.h  material_compiler.cc  material_compiler.h  model_compiler.cc  model_compiler.h  scene_compiler.cc  scene_compiler.h  script_compiler.cc  script_compiler.h  shader_compiler.cc  shader_compiler.h
src/tools/compilers/definitions/: asset_types.cc  asset_types.h  default_assets.h  magic.h
src/tools/compilers/utils/: glslang.cc  glslang.h  gltf_compiler.cc  gltf_compiler.h  hlsl_compiler.cc  hlsl_compiler.h  spirv_cross.cc  spirv_cross.h
src/tools/editor/: CMakeLists.txt  main.cc
src/tools/editor/application/: editor_application.cc  editor_application.h  editor_camera.cc  editor_camera.h  styling.cc  styling.h
src/tools/editor/asset-browser/: asset_browser.cc  (+7 more)
src/tools/sparse/: CMakeLists.txt  definitions.h  json_header_parser.cc  json_header_parser.h  main.cc  parser.cc  parser.h  sparse_writer.cc  sparse_writer.h
(+77 files in other folders)
