CMAKE_MINIMUM_REQUIRED(VERSION 3.10.1)
PROJECT(snuffbox-hydra)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_MODULE_PATH "${CMAKE_ROOT}/Modules ${CMAKE_CURRENT_SOURCE_DIR}/cmake")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

ADD_DEFINITIONS("-DGLM_FORCE_CXX98")

IF (MSVC)
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX")
  
  SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
  SET_PROPERTY(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "cmake-targets")
  
ELSE ()
  set (CMAKE_CXX_STANDARD 14)
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror")
ENDIF ()

SET(SNUFF_BUILD_TEST ON CACHE BOOL "Should the snuffbox-test project be built?")
SET(SNUFF_BUILD_EDITOR ON CACHE BOOL "Should the editor project be built?")
SET(SNUFF_SCRIPTING "duktape" CACHE STRING "The type of scripting environment to build")
SET(SNUFF_ENCRYPTION_KEY "snuffbox" CACHE STRING "The encytpion key/salt to use for encryption algorithms")
SET_PROPERTY(CACHE SNUFF_SCRIPTING PROPERTY STRINGS duktape disabled)

IF (SNUFF_SCRIPTING STREQUAL "duktape")
  SET(SNUFF_DUKTAPE ON)
  ADD_DEFINITIONS("-DSNUFF_DUKTAPE")
ELSEIF (SNUFF_SCRIPTING STREQUAL "disabled")
  SET(SNUFF_NSCRIPTING ON)
  ADD_DEFINITIONS("-DSNUFF_NSCRIPTING")
ENDIF ()

IF (SNUFF_BUILD_TOOLS)
  SET(CMAKE_PREFIX_PATH "Qt/5.10.1/msvc2015_64" CACHE STRING "")
  FIND_PACKAGE(Qt5 COMPONENTS Widgets REQUIRED)
  
  IF (NOT Qt5_FOUND)
    MESSAGE(FATAL_ERROR "In order to build the tools projects, Qt5 needs to be installed on the system")
  ENDIF ()
ENDIF (SNUFF_BUILD_TOOLS)

ADD_SUBDIRECTORY("cmake")
ADD_SUBDIRECTORY("deps")

ADD_DEFINITIONS("-DSNUFF_ENCRYPTION_KEY=\"${SNUFF_ENCRYPTION_KEY}\"")

ADD_SUBDIRECTORY("src")
